discussion/kv_engine/144139/144139_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

Merge mad-hatter into master

* commit '8c3189f72':
  MB-43205: Consumer enforces allowSanitizeValueInDeletion at DCP_PREPARE

Change-Id: I70974d372765d4ccd180e2c426da425500f6e754

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2021-01-26 11:47:04.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Paolo Cocchi
Date: 2021-01-26 11:47:37.000000000
Message: 
Patch Set 2: -Code-Review
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-01-26 11:51:08.000000000
Message: 
Patch Set 2: Code-Review+2
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-01-26 12:04:42.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33136/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33136/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28515/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28515/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8252/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8380/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8380/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8634/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8634/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16183/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16183/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6718/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/dcp_stream_test.h:189:19: error: no template named "optional" in namespace "boost"; did you mean "std::optional"? [clang-diagnostic-error]
            const boost::optional<cb::durability::Requirements>& durReqs);
                  ^~~~~~~~~~~~~~~
                  std::optional
/usr/bin/../lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/optional:453:11: note: "std::optional" declared here
    class optional
          ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6718/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/dcp_stream_test.h:189:19:
error: no template named "optional" in namespace "boost"; did you mean "std::optional"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6718/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7338/ : FAILURE

Compile error at [2021-01-26T11:50:28.389Z] ../kv_engine/engines/ep/tests/module_tests/dcp_stream_test.h:189:19:
error: no template named "optional" in namespace "boost"; did you mean "std::optional"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7338/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/5254/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
